[gd_scene load_steps=2 format=3 uid="uid://b4fmuv57jjryb"]

[ext_resource type="Script" path="res://prog_152a.gd" id="1_7okkp"]

[node name="prog_152a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7okkp")

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 512.0
offset_right = 246.0
offset_bottom = 647.0
text = "Calculate "

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 912.0
offset_top = 516.0
offset_right = 1156.0
offset_bottom = 651.0
text = "Exit"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 514.0
offset_right = 705.0
offset_bottom = 649.0
text = "Clear"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 438.0

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
